force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/AH_Case_Flags_History_Tracking__c.object-meta.xml
<CustomObject>
    <description>NICC-026092</description>
    <label>AH Case Flags History Tracking</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Case Flag History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AH Case Flags History Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>