force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-026092 - A reference to the Case Flags Business Hours record used to calculate the Case Flag Business Age. This is set automatically and should not be manipulated.</description>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>AH Case Flags History Tracking</relationshipLabel>
    <relationshipName>AH_Case_Flags_History</relationshipName>
    <type>Lookup</type>
</CustomField>