force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Business_Hours_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Elapsed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>NICC-026092 - Total business hours elapsed during this Tracking record.</description>
    <label>Business Hours Elapsed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>