force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Business_Hours_in_Age_3__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_in_Age_3__c</fullName>
    <defaultValue>0</defaultValue>
    <description>NICC-026092 - Number of business hours spent with flag 3</description>
    <inlineHelpText>Number of business hours spent with flag 3</inlineHelpText>
    <label>Business Hours in Age 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>