force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Business_Hours_Offset__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>NICC-026092</description>
    <label>Business Hours Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>