force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Case_Flag_History_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Flag_History_Number__c</fullName>
    <description>NICC-026092 - Custom autonumber that increments on a Case by Case basis.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Custom autonumber that increments on a Case by Case basis.</inlineHelpText>
    <label>Case Flag History Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>