force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Case_Flags_Age_1_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Flags_Age_1_Hours__c</fullName>
    <description>NICC-026092 - Number of hours spent with flag 1</description>
    <inlineHelpText>Number of hours spent with flag 1</inlineHelpText>
    <label>Case Flags Age 1 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>