force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Record_Type__c</fullName>
    <businessOwnerUser>keith.karanzias@newmarketinc.com.sbfull</businessOwnerUser>
    <description>NICC-055399</description>
    <formula>Case__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the Case Record Type for the associated Case. Used in a Flow for the Solution Adoption team to ensure he Flow only runs on their specific record type.</inlineHelpText>
    <label>Case Record Type</label>
    <type>Text</type>
</CustomField>