force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>NICC-026092 - Datetime marking the ending of tracking for this history record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Datetime marking the ending of tracking for this history record.</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>