force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Flag_Level__c.field-meta.xml
<CustomField>
    <fullName>Flag_Level__c</fullName>
    <description>NICC-026092</description>
    <formula>IF(NOT(Flag_Set__c),null,IF(Hours_Offset__c+Hours_Elapsed__c &gt;= Case_Flags_Age_4_Hours__c, 
&quot;L4&quot;, 
IF(Hours_Offset__c+Hours_Elapsed__c &gt;= Case_Flags_Age_3_Hours__c, 
&quot;L3&quot;, 
IF(Hours_Offset__c+Hours_Elapsed__c &gt;= Case_Flags_Age_2_Hours__c, 
&quot;L2&quot;, 
IF(Hours_Offset__c+Hours_Elapsed__c &gt;= Case_Flags_Age_1_Hours__c, 
&quot;L1&quot;, 
&quot;L0&quot;) 
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag Level</label>
    <type>Text</type>
</CustomField>