force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Flag_Set__c.field-meta.xml
<CustomField>
    <fullName>Flag_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-026092</description>
    <label>Flag Set</label>
    <type>Checkbox</type>
</CustomField>