force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Hours_Elapsed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Elapsed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>NICC-026092 - Number of hours on the Case at the time this record was created.</description>
    <label>Hours Elapsed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>