force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Owner_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_Is_Active__c</fullName>
    <description>NICC-026092</description>
    <formula>Owner__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Is Active</label>
    <type>Checkbox</type>
</CustomField>