force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Owner_License_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_License_Type__c</fullName>
    <description>NICC-026092</description>
    <formula>Text(Owner__r.UserType)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner License Type</label>
    <type>Text</type>
</CustomField>