force-app/main/default/objects/AH_Case_Flags_History_Tracking__c/fields/Owner_Name_Old__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name_Old__c</fullName>
    <description>NICC-026092 - Case Owner full name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner Name Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>